Implement consumer listing (#18)
